// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button focus should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(116, 172, 0, 1)",
      "borderRadius": 8,
      "flexDirection": "row",
      "fontFamily": "Lato-Bold",
      "justifyContent": "center",
      "maxWidth": 500,
      "paddingBottom": 13,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 13,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.5}
    numberOfLines={3}
    style={
      {
        "color": "rgba(255, 255, 255, 1)",
        "fontFamily": "Lato-Bold",
        "fontSize": 15,
        "letterSpacing": 2,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
    testID="RNButton.text"
  >
    FOCUS BUTTON
  </Text>
</View>
`;

exports[`Button focus when disabled should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(185, 213, 128, 1)",
      "borderRadius": 8,
      "flexDirection": "row",
      "fontFamily": "Lato-Bold",
      "justifyContent": "center",
      "maxWidth": 500,
      "paddingBottom": 13,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 13,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.5}
    numberOfLines={3}
    style={
      {
        "color": "#ffffff80",
        "fontFamily": "Lato-Bold",
        "fontSize": 15,
        "letterSpacing": 2,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
    testID="RNButton.text"
  >
    FOCUS DISABLED
  </Text>
</View>
`;

exports[`Button neutral should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "borderColor": "rgba(69, 69, 69, 1)",
      "borderRadius": 8,
      "borderWidth": 3,
      "flexDirection": "row",
      "fontFamily": "Lato-Bold",
      "justifyContent": "center",
      "maxWidth": 500,
      "paddingBottom": 13,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 13,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.5}
    numberOfLines={3}
    style={
      {
        "color": "rgba(69, 69, 69, 1)",
        "fontFamily": "Lato-Bold",
        "fontSize": 15,
        "letterSpacing": 2,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
    testID="RNButton.text"
  >
    NEUTRAL BUTTON
  </Text>
</View>
`;

exports[`Button neutral when disabled should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "rgba(130, 129, 129, 1)",
      "borderRadius": 8,
      "borderWidth": 3,
      "flexDirection": "row",
      "fontFamily": "Lato-Bold",
      "justifyContent": "center",
      "maxWidth": 500,
      "paddingBottom": 13,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 13,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.5}
    numberOfLines={3}
    style={
      {
        "color": "rgba(130, 129, 129, 1)",
        "fontFamily": "Lato-Bold",
        "fontSize": 15,
        "letterSpacing": 2,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
    testID="RNButton.text"
  >
    NEUTRAL DISABLED
  </Text>
</View>
`;

exports[`Button primary should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(69, 69, 69, 1)",
      "borderRadius": 8,
      "flexDirection": "row",
      "fontFamily": "Lato-Bold",
      "justifyContent": "center",
      "maxWidth": 500,
      "paddingBottom": 13,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 13,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.5}
    numberOfLines={3}
    style={
      {
        "color": "rgba(255, 255, 255, 1)",
        "fontFamily": "Lato-Bold",
        "fontSize": 15,
        "letterSpacing": 2,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
    testID="RNButton.text"
  >
    PRIMARY BUTTON
  </Text>
</View>
`;

exports[`Button primary when disabled should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(130, 129, 129, 1)",
      "borderRadius": 8,
      "flexDirection": "row",
      "fontFamily": "Lato-Bold",
      "justifyContent": "center",
      "maxWidth": 500,
      "paddingBottom": 13,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 13,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.5}
    numberOfLines={3}
    style={
      {
        "color": "#ffffff80",
        "fontFamily": "Lato-Bold",
        "fontSize": 15,
        "letterSpacing": 2,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
    testID="RNButton.text"
  >
    PRIMARY DISABLED
  </Text>
</View>
`;

exports[`Button warning should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(155, 16, 16, 1)",
      "borderRadius": 8,
      "flexDirection": "row",
      "fontFamily": "Lato-Bold",
      "justifyContent": "center",
      "maxWidth": 500,
      "paddingBottom": 13,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 13,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.5}
    numberOfLines={3}
    style={
      {
        "color": "rgba(255, 255, 255, 1)",
        "fontFamily": "Lato-Bold",
        "fontSize": 15,
        "letterSpacing": 2,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
    testID="RNButton.text"
  >
    WARNING BUTTON
  </Text>
</View>
`;

exports[`Button warning when disabled should render correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(176, 99, 101, 1)",
      "borderRadius": 8,
      "flexDirection": "row",
      "fontFamily": "Lato-Bold",
      "justifyContent": "center",
      "maxWidth": 500,
      "paddingBottom": 13,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 13,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.5}
    numberOfLines={3}
    style={
      {
        "color": "#ffffff80",
        "fontFamily": "Lato-Bold",
        "fontSize": 15,
        "letterSpacing": 2,
        "lineHeight": 18,
        "textAlign": "center",
      }
    }
    testID="RNButton.text"
  >
    WARNING DISABLED
  </Text>
</View>
`;
